--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@expo/vector-icons": "^14.0.4",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.8.4",
     "expo": "~52.0.40",
     "expo-blur": "~14.0.3",
