--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-otp-textinput": "^1.1.6",
+    "react-native-paper": "^5.13.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
