--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@clerk/clerk-expo": "^2.9.5",
     "@expo-google-fonts/montserrat": "^0.3.0",
     "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@rneui/base": "^4.0.0-rc.7",
